# task-master

./: .gitignore  Cargo.toml  README.md  TEST_SETUP.md  docker-compose.yaml  final_wordlist.txt  test.db  test_endpoints.sh
.cursor/rules/: rust-rule.mdc
.github/workflows/: ci.yml
config/: default.toml  example.toml  test.toml
migrations/: 001_initial.sql  001_initial_psql.sql  002_add_opt_ins_table.sql  003_eth_and_x_associations_table.sql  004_admin.sql  005_relevant_tweets_and_tweet_authors_table.sql  006_raid_quests_and_leaderboard_entries.sql  006_raid_quests_and_raid_submissions_table.sql  007_raid_submissions_target_id_nullable.sql  008_add_is_ignore_col_to_tweet_authors_table.sql  009_tweet_pull_usage_table.sql  010_drop_tasks_table.sql
psql_migration/: 001_initial_psql.sql
scripts/: check_postgres.sh  create_admin.sh  create_raid.sh  deploy.sh  reset_db.sh  run_migration.sh  run_non_chain_tests.sh  run_tests.sh  seed_addresses.sh  seed_test_relevant_tweets.sh  seed_test_tweet_authors.sh  start_dev_chain.sh  start_postgres.sh  start_test.sh  stop_postgres.sh  test_opt_in.sh
src/: args.rs  config.rs  csv_persistence.rs  db_persistence.rs  errors.rs  graphql_client.rs  http_server.rs  lib.rs  main.rs  metrics.rs  reverser.rs  signature_verification.rs  task_generator.rs  transaction_manager.rs
src/handlers/: address.rs  auth.rs  config.rs  exchange_rate.rs  mod.rs  raid_quest.rs  referral.rs  relevant_tweet.rs  risk_checker.rs  task.rs  tweet_author.rs  wallet_feature_flags.rs
src/middlewares/: jwt_auth.rs
src/models/: address.rs  admin.rs  auth.rs  eth_association.rs  mod.rs  opt_in.rs  raid_leaderboard.rs  raid_quest.rs  raid_submission.rs  referrals.rs  relevant_tweet.rs  revelant_tweet.rs  task.rs  tweet_author.rs  tweet_pull_usage.rs  x_association.rs
src/repositories/: address.rs  admin.rs  eth_association.rs  mod.rs  opt_in.rs  raid_leaderboard.rs  raid_quest.rs  raid_submission.rs  referral.rs  relevant_tweet.rs  task.rs  tweet_author.rs  tweet_pull_usage.rs  x_assocation.rs  x_association.rs
src/routes/: address.rs  auth.rs  config.rs  exchange_rate.rs  mod.rs  raid_quest.rs  referral.rs  relevant_tweet.rs  risk_checker.rs  task.rs  tweet_author.rs  wallet_feature_flags.rs
src/services/: alert_service.rs  ethereum_service.rs  exchange_rate_service.rs  graphql_client.rs  mod.rs  raid_leaderboard_service.rs  reverser.rs  risk_checker_service.rs  signature_service.rs  task_generator.rs  telegram_service.rs  transaction_manager.rs  tweet_synchronizer_service.rs  wallet_config_service.rs  wallet_feature_flags_service.rs
src/utils/: eth_address_validator.rs  generate_referral_code.rs  jwt.rs  mod.rs  parse_x_status_url.rs  test_app_state.rs  test_db.rs  x_url.rs
testnet_data_snapshots/: TESTNET_DATA_README.md  account_migrations.chains.json  aggregate_miners_across_testnets.py  aggregated_miners.csv  dirac_miners.csv  dirac_miners.json  export_miners_to_csv.py  fetch_account_migrations.py  fetch_current_miners.py  planck_miners.csv  planck_miners.json  resonance_network_miners.csv  resonance_network_miners.json  schrodinger_miners.csv  schrodinger_miners.json
wallet_configs/: default_configs.json
