[package]
name = "task-master"
version = "0.1.0"
edition = "2021"
authors = ["TaskMaster Team"]
license = "Apache-2.0"
description = "Task management server with reversible blockchain transactions"

[[bin]]
name = "task-master"
path = "src/main.rs"

[dependencies]
# Quantus CLI for blockchain interactions
quantus-cli = "0.2.1"

# Human checkphrase
qp-human-checkphrase = "0.1.2"

# Async runtime
tokio = { version = "1.46", features = ["full", "test-util"] }

# HTTP server
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.7", features = [
  "runtime-tokio-rustls",
  "chrono",
  "postgres",
  "uuid",
  "migrate",
] }

# Signature verification
# Using quantus-cli's dilithium crypto for signature verification
hex = "0.4"
sp-core = "37.0.0"
sp-runtime = "42.0.0"

# Configuration
clap = { version = "4.5", features = ["derive"] }
toml = "0.9"
config = "0.14"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Random generation
rand = "0.9"
uuid = { version = "1.6", features = ["v4"] }

# HTTP client for GraphQL
reqwest = { version = "0.11", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Additional utilities
dirs = "6.0"
subxt = "0.43.0"
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
qp-rusty-crystals-dilithium = "1.0.3"

[dev-dependencies]
wiremock = "0.6.5"
