[package]
authors = ["TaskMaster Team"]
description = "Task management server with reversible blockchain transactions"
edition = "2021"
license = "Apache-2.0"
name = "task-master"
version = "0.1.0"

[[bin]]
name = "task-master"
path = "src/main.rs"

[dependencies]
# Quantus crates
qp-human-checkphrase = "0.1.2"
qp-rusty-crystals-dilithium = "2.0.0"
quantus-cli = "0.3.0"
rusx = {git = "https://github.com/Quantus-Network/rusx", tag = "v0.2.0"}

# Async runtime
tokio = {version = "1.46", features = ["full", "test-util"]}

# HTTP server
axum = {version = "0.7", features = ["tokio"]}
tower = "0.4"
tower-cookies = "0.10"
tower-http = {version = "0.5", features = ["cors", "trace"]}

# Serialization
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"

# Database
sqlx = {version = "0.7", features = [
  "runtime-tokio-rustls",
  "chrono",
  "postgres",
  "uuid",
  "migrate",
]}

# Signature verification
# Using quantus-cli's dilithium crypto for signature verification
hex = "0.4"
sp-core = "37.0.0"
sp-runtime = "42.0.0"

# Configuration
clap = {version = "4.5", features = ["derive"]}
config = "0.14"
toml = "0.9"

# Time handling
chrono = {version = "0.4", features = ["serde"]}

# Random generation
rand = "0.9"
uuid = {version = "1.6", features = ["v4"]}

# HTTP client for GraphQL
reqwest = {version = "0.11", features = ["json"]}

# Logging
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter"]}

# Error handling
anyhow = "1.0"
thiserror = "2.0"

# Additional utilities
dirs = "6.0"
jsonwebtoken = "9.3.1"
lazy_static = "1.5.0"
prometheus = {version = "0.14.0", features = ["process"]}
subxt = "0.43.0"
tiny-keccak = {version = "2.0.2", features = ["keccak"]}

[features]
default = []
chain = []

[dev-dependencies]
mockall = "0.13"
wiremock = "0.5"
# Enable the testing feature ONLY for tests
rusx = {git = "https://github.com/Quantus-Network/rusx", tag = "v0.2.0", features = ["testing"]}
